# quant_trading_project

./: .gitignore  Dockerfile  Procfile  README.md  backtest_report.html  dashboard.py  docker-compose.yml  ml_strategy_report.html  pyproject.toml  start.sh
.github/workflows/: ci.yml
notebooks/04_ml_research/: 02_xgboost_training.ipynb  03_drl_ppo_training.ipynb
notebooks/04_ml_research/01_random/: 01_random_forest_training.ipynb
notebooks/04_ml_research/drl_tensorboard_logs/ppo/PPO_1/: events.out.tfevents.1756253812.Enis-Macbook-Pro.local.80876.0
notebooks/04_ml_research/drl_tensorboard_logs/ppo/PPO_2/: events.out.tfevents.1756476574.Enis-Macbook-Pro.local.13181.0
notebooks/04_ml_research/drl_tensorboard_logs/ppo/PPO_3/: events.out.tfevents.1756477138.Enis-Macbook-Pro.local.15339.0
qmind_quant/analytics/: technical_indicators.py
qmind_quant/config/: paths.py  setting.py
qmind_quant/core/: event_manager.py  event_types.py
qmind_quant/data_management/: data_collector.py  data_handler.py  feature_engineer.py  live_data_handler.py
qmind_quant/execution/: execution.py  live_execution.py
qmind_quant/ml_models/: model_trainer.py  train_drl_agent.py
qmind_quant/ml_models/environments/: trading_env.py
qmind_quant/ml_models/models/: random_forest_v1.joblib  xgboost_v1.joblib
qmind_quant/optimization/: portfolio_optimizer.py
qmind_quant/portfolio_management/: portfolio.py
qmind_quant/simulation/: backtest_engine.py
qmind_quant/strategies/: base_strategy.py
reports/: drl_ppo_strategy_report.html  ml_strategy_report.html  single_xgboost_report.html  walk_forward_xgboost_report.html  xgboost_v1_report.html
scripts/: check_env.py  run_backtest.py  run_drl_backtest.py  run_feature_engineering.py  run_ingestion.py  run_live_trading.py  run_optimization.py  run_portfolio_optimization.py  run_walk_forward.py
tests/unit/: test_strategies.py
